Fix broken infomessage implementation

--- a/src/components/design-system.css
+++ b/src/components/design-system.css
@@ -975,6 +975,35 @@ a,
 .InfoMessage.info a:visited {
   color: var(--BrandForest);
 }
+.InfoMessage.Alert {
+  padding-left: 1em;
+  padding-right: 1em;
+  transition: all 150ms ease-in-out;
+  line-height: 1.35;
+  padding-top: 0.85em;
+  padding-bottom: 0.85em;
+  margin-bottom: 1.25rem;
+  font-weight: 500;
+}
+.InfoMessage.Alert.error {
+  background-color: var(--BrandPasty);
+}
+.InfoMessage.Alert.error,
+.InfoMessage.Alert.error a,
+.InfoMessage.Alert.error a:hover,
+.InfoMessage.Alert.error a:active,
+.InfoMessage.Alert.error a:visited {
+  color: var(--BrandSunburn);
+}
+.InfoMessage.Alert.warning {
+  background-color: var(--BrandPasty);
+}
+.InfoMessage.Alert.success {
+  background: var(--BrandMoss);
+}
+.InfoMessage.Alert.info {
+  background: var(--BrandDuckegg);
+}
 
 /* @getethos/design-system/Media.scss
    ========================================================================== */
